<resources>
    <string name="app_name">FoodPlanner_App</string>
    <string name="welcome_txt">Mak e your menu</string>
    <string name="Logo_txt">Food Planner</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="top_rated">Top world meals</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mealName">Egyptian soap</string>
    <string name="fav_dishes_txt">My Favourit dishes</string>
    <string name="underline_login"><u>Login</u></string>
    <string name="underline_signup"><u>SignUp</u></string>
    <string name="signup">Sign Up</string>
    <string name="continue_as_a_guest"><u>Continue as a guest</u></string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="or">Or</string>
    <string name="forgotten_password">Forgotten password ?</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="random_mail">amazen@iti.com</string>
    <string name="cooked_meals">Cooked Meals</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="random_name">Ahmed Mazen</string>
    <string name="_19">19</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="_22">22</string>
    <string name="date">12/12/2022</string>
    <string name="login">Login</string>
    <string name="dummy_description">dummy_description</string>
    <string name="inspireMeal">Inspirational Meal</string>
    <string name="ins_category_txt" >Category</string>
    <string name="back"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>


</resources>