<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/logout_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/gray_ripple"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:fontFamily="@font/ubuntu"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/log_out"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_tv"
        android:drawableStart="@drawable/turn_off_icon" />

    <TextView
        android:id="@+id/settings_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/gray_ripple"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:fontFamily="@font/ubuntu"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_tv"
        android:drawableStart="@drawable/setting_icon" />

    <TextView
        android:id="@+id/about_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/gray_ripple"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:fontFamily="@font/ubuntu"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share_tv"
        android:drawableStart="@drawable/error_icon" />

    <TextView
        android:id="@+id/share_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/gray_ripple"
        android:clickable="true"
        android:drawablePadding="16dp"
        android:fontFamily="@font/ubuntu"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/share"
        android:drawableStart="@drawable/share_icon"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider3"
        />

    <TextView
        android:id="@+id/cooked_meals_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/_19"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialDivider4_vertical"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        app:dividerColor="@color/dark_gray"
        app:dividerThickness="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail_tv" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider3"
        android:layout_width="0dp"
        android:layout_height="1dp"

        android:layout_marginTop="24dp"
        app:dividerColor="@color/dark_gray"

        app:dividerThickness="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_tv3" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider4_vertical"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:dividerColor="@color/dark_gray"
        app:dividerThickness="2dp"
        app:layout_constraintBottom_toTopOf="@+id/materialDivider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

    <TextView
        android:id="@+id/username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/random_name"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_imgView" />

    <TextView
        android:id="@+id/username_tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/favorite_meals"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/fav_meals_score_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/fav_meals_score_tv"
        app:layout_constraintTop_toBottomOf="@+id/fav_meals_score_tv" />

    <TextView
        android:id="@+id/username_tv5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/cooked_meals"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/cooked_meals_score_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cooked_meals_score_tv"
        app:layout_constraintTop_toBottomOf="@+id/cooked_meals_score_tv" />

    <TextView
        android:id="@+id/mail_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/random_mail"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_tv"
        app:drawableStartCompat="@drawable/mail_icon" />

    <ImageView
        android:id="@+id/bg_imgView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/wave_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/edit_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/edit_icon" />

    <ImageView
        android:id="@+id/profile_imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg_imgView"
        app:srcCompat="@drawable/dummy_profile_pic" />

    <TextView
        android:id="@+id/fav_meals_score_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/_22"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/materialDivider4_vertical"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

</androidx.constraintlayout.widget.ConstraintLayout>
